--- a/assets/templates/modules/tutorial.html
+++ b/assets/templates/modules/tutorial.html
@@ -1,4 +1,4 @@
-<section-tutorial class="tutorial" data-open="{ active }" data-animate={ false : app.device.isMobile || animate === false } active-zone="{ step.activeZone }">
+<section-tutorial class="tutorial" data-open="{ active }" data-animate={ false : app.device.isMobile || options.animate === false } active-zone="{ step.activeZone }">
 
     <div class="tutorial__shape" name="shape" style="{ step.style }" data-figure={ step.figure }></div>
 
@@ -7,7 +7,7 @@
             <p class="pos-tr p-m c-grayLight fontSize-m { display-none : !nav.steps }">Шаг { num } из { steps.get().length }</p>
             <div class="tutorial__message__title">{ message.title }</div>
             <p class="tutorial__message__text">{ message.text }</p>
-            <div class="fontSize-0 { display-none : !nav.buttons.success && !nav.buttons.cancel }">
+            <div class="fontSize-0 nowrap { display-none : !nav.buttons.success && !nav.buttons.cancel }">
                 <button onClick={ nextStep } onUpdate="none" class="btn btn-{ nav.buttons.success.size ?  nav.buttons.success.size : 'm' } { nav.buttons.success.title ? 'btn-success' : (endShow ? 'btn-success' : 'btn-default-hover-success') } mr-xs">
                     <svg if={ endShow && nav.buttons.success === true } class="btn-svg btn-svg-repeat" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                         <path class="fill-white" d="M 39.78125 5.96875 A 2.0002 2.0002 0 0 0 38 8 L 38 12.5625 C 34.722701 9.1373523 30.10346 7 25 7 C 15.082241 7 7 15.082241 7 25 A 2.0002 2.0002 0 1 0 11 25 C 11 17.243759 17.243759 11 25 11 C 28.816123 11 32.256876 12.535728 34.78125 15 L 31 15 A 2.0002 2.0002 0 1 0 31 19 L 40 19 L 42 19 L 42 17 L 42 8 A 2.0002 2.0002 0 0 0 39.96875 5.96875 A 2.0002 2.0002 0 0 0 39.78125 5.96875 z M 40.78125 22.96875 A 2.0002 2.0002 0 0 0 39 25 C 39 32.757363 32.756392 39 25 39 C 21.184399 39 17.742551 37.46305 15.21875 35 L 19 35 A 2.0002 2.0002 0 1 0 19 31 L 10 31 L 8 31 L 8 33 L 8 42 A 2.0002 2.0002 0 1 0 12 42 L 12 37.4375 C 15.276425 40.860887 19.895994 43 25 43 C 34.917608 43 43 34.918637 43 25 A 2.0002 2.0002 0 0 0 40.96875 22.96875 A 2.0002 2.0002 0 0 0 40.78125 22.96875 z"></path>
@@ -25,7 +25,6 @@
 
     $.active = false;
     $.ready = false;
-    $.animate = true;
     $.steps = new Baobab([]).root;
     $.borderColor = "#265cdc";
 
@@ -90,6 +89,9 @@
             style: "clear:both"
         };
         $.endShow = false;
+        $.options = {
+            animate: true
+        };
 
         if ($.actions.events){
             _.each($.actions.events, function(item){
@@ -114,9 +116,7 @@
             $.steps.set(app.plugins.tutorial[tutorial]);
             $.scope = $$(scope);
 
-            if (options && options.animate !== undefined){
-                $.animate = options.animate;
-            }
+            if (options) _.extend($.options, options);
 
             $.active = true;
 
@@ -138,7 +138,12 @@
     };
 
     $.nextStep = function(){
-        $.changeStep("right");
+        if (_.isFunction($.nav.buttons.success.callback)){
+            $.nav.buttons.success.callback($, $.target);
+        }
+        else {
+            $.changeStep("right");
+        }
     };
 
     $.prevStep = function(){
@@ -181,8 +186,13 @@
 
             $.trigger("messageShow");
 
-            if (!$.cursor[arrow]() && arrow == "right") $.endShow = true;
-            else $.endShow = false;
+            if (!$.cursor[arrow]() && arrow == "right"){
+                $.endShow = true;
+                $.trigger("success");
+            }
+            else {
+                $.endShow = false;
+            }
 
             $.update();
 
@@ -320,7 +330,7 @@
                         }
                     }
                 }
-                $.nav = _.extend($.nav, $.step.nav);
+                _.extend($.nav, $.step.nav);
             }
         },
         destroy: function(){
@@ -329,6 +339,9 @@
     };
 
     $.hide = function(){
+        if (!$.endShow){
+            $.trigger("close");
+        }
         $.update({
             active: false
         })
@@ -341,6 +354,8 @@
         });
 
         $.navigate.destroy();
+
+        $.trigger("hide");
 
         app.$dom.window.off("resize.tutorial");
     };
