--- a/assets/templates/sections/list/resumeList.html
+++ b/assets/templates/sections/list/resumeList.html
@@ -31,6 +31,11 @@
 
     $.on("mount", function(){
         $.slider = new app.plugins.slider($.sliderEl);
+        if (app.metrika.get("offers.welcome.show")){
+            $root.one("ready", function(){
+                $.start();
+            });
+        }
     });
 
     $.start = function(callback){
