--- a/assets/templates/sections/profile/profile.html
+++ b/assets/templates/sections/profile/profile.html
@@ -43,7 +43,7 @@
                             <div class="mt-xxs">
                                 <span onClick={ open.payment } onUpdate="none" class="link-underline link-default-hover-warning">Пополнить баланс</span>
                             </div>
-                            <div class="c-gray mt-s">Последний визит: сегодня в 3:17</div>
+                            <div class="c-gray mt-s">Последний визит: { get.lastVisit() }</div>
                         </div>
                     </div>
                 </div>
@@ -114,6 +114,19 @@
             active: true
         })
         $.callback = callback;
+    };
+
+    $.get = {
+        lastVisit: function(){
+            var date = $account.get("visite"),
+                days = moment(date).diff(moment(), 'days');
+
+            if (days === 0) return "сегодня в " + moment(date).format('HH:mm');
+            else if (days === -1) return "вчера в " + moment(date).format('HH:mm');
+            else {
+                return moment(date).format('D MMMM') + " в " + moment(date).format('HH:mm');
+            }
+        }
     };
 
     $.edit = {
